sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:2: error: Missing closing brace `}' assumed here
def solve() {
^BasicPancake:2: error: expected class or object definition
def solve() {
^BasicPancake:19: error: Missing closing brace `}' assumed here
}
^